--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,7 @@ apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'idea'
 apply plugin: 'jacoco-android'
+apply plugin: 'com.apollographql.android'
 apply from: 'keystore.gradle'
 apply from: '../jacoco.gradle'
 apply from: '../quality.gradle'
@@ -136,4 +137,18 @@ dependencies {
     testImplementation "org.mockito:mockito-inline:$mockito_inline_version" // Mockito inline adds support for mocking final classes and methods
     testImplementation "org.assertj:assertj-core:$assertj_version"
     testImplementation "com.squareup.leakcanary:leakcanary-android-no-op:$leak_canary_version"
+
+    //GraphQL
+    implementation 'com.apollographql.apollo:apollo-runtime:1.1.3'
+    compileOnly 'org.jetbrains:annotations:13.0'
+    testCompileOnly 'org.jetbrains:annotations:13.0'
+    implementation 'javax.annotation:jsr250-api:1.0'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+
 }
+apollo {
+    customTypeMapping = [
+            "timestampz" : "java.util.Date"
+    ]
+}
+
