--- a/build.gradle
+++ b/build.gradle
@@ -7,22 +7,22 @@ buildscript {
         jcenter()
     }
     dependencies {
+
         classpath 'com.android.tools.build:gradle:3.4.0'
         classpath 'com.dicedmelon.gradle:jacoco-android:0.1.4'
         classpath 'org.codehaus.groovy:groovy-all:2.4.15'
         classpath 'com.chaitanyapramod.gradle:findbugs-android:1.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.apollographql.apollo:apollo-gradle-plugin:1.1.3'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
 }
-
 allprojects {
     repositories {
         mavenCentral()
         google()
         jcenter()
         maven { url "https://jitpack.io" }
-        maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
     }
 }
