--- a/app/build.gradle
+++ b/app/build.gradle
@@ -102,6 +102,7 @@ buildscript {
     ext.junit_version = '4.12'
     ext.mockito_inline_version = '2.13.0'
     ext.assertj_version = '3.9.0'
+    ext.android_constraint_version='1.1.3'
 }
 
 dependencies {
@@ -118,6 +119,8 @@ dependencies {
     implementation "androidx.core:core:$androidx_core_version"
     implementation "androidx.recyclerview:recyclerview:$androidx_recycler_version"
     implementation "com.google.android.material:material:$androidx_material_version"
+    implementation "com.android.support.constraint:constraint-layout:$android_constraint_version"
+
 
     // Dagger
     implementation "com.google.dagger:dagger:$dagger_version"
